--- a/ExchangeRatesLibrary/FreeCurrencyExchangeApiLib.csproj
+++ b/ExchangeRatesLibrary/FreeCurrencyExchangeApiLib.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\TextResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -14,7 +18,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\TextResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>TextResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
